syntax = "proto3";

package raft_proto;

// ============================================================================
// 基础类型 - Raft 协议核心类型
// ============================================================================

// 节点 ID
message NodeId {
    uint64 id = 1;
}

// Leader ID：包含 term 和 node_id
message LeaderId {
    uint64 term = 1;
    NodeId node_id = 2;
}

// Log ID：包含 leader_id 和 index
message LogId {
    LeaderId leader_id = 1;
    uint64 index = 2;
}

// Vote：投票信息
message Vote {
    LeaderId leader_id = 1;
    bool committed = 2;
}

// ============================================================================
// 节点配置
// ============================================================================

// 节点配置信息
message NodeConfig {
    uint64 node_id = 1;
    string raft_addr = 2;   // gRPC 地址，用于 Raft 内部通信
    string resp_addr = 3;   // RESP 协议地址，用于客户端连接
}

// ============================================================================
// 日志条目
// ============================================================================

// 空日志条目（用于心跳等）
message BlankPayload {}

// 普通日志条目（用户数据）
message NormalPayload {
    bytes data = 1;
}

// 成员变更日志条目
message Membership {
    repeated uint64 node_ids = 1;
    repeated NodeConfig nodes = 2;
}

// 日志条目 Payload（使用 oneof 实现枚举）
message EntryPayload {
    oneof payload {
        BlankPayload blank = 1;
        NormalPayload normal = 2;
        Membership membership = 3;
    }
}

// 日志条目
message Entry {
    LogId log_id = 1;
    EntryPayload payload = 2;
}

// ============================================================================
// Binlog - 用户数据结构
// ============================================================================

// Binlog 条目
message BinlogEntry {
    uint32 cf_idx = 1;
    string op_type = 2;    // "Put", "Delete", etc.
    bytes key = 3;
    bytes value = 4;
}

// Binlog 请求
message Binlog {
    uint64 db_id = 1;
    uint64 slot_idx = 2;
    repeated BinlogEntry entries = 3;
}

// ============================================================================
// 通用响应
// ============================================================================

// 通用响应包装
message Response {
    bool success = 1;
    string message = 2;
}
